2003-04-16  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/dbutils.c (put_status_parsing_file):
	Add a util method that prints a file status message.
	Currently this just prints the file name to
	stdout, this message is later read by the ide
	when updating the parser status bar.
	* hyper/sn.h: Declare put_status_parsing_file.
	* parsers/cobol/skeleton.c (log_symbol_filename):
	* parsers/cpp/skeleton.c (log_symbol_filename):
	* parsers/fortran/ftnchek.c (log_symbol_filename):
	* parsers/java/skeleton.c (log_symbol_filename):
	* parsers/tcl/skeleton.c (log_symbol_filename):
	* parsers/toolbox/snptools.c (sn_register_filename):
	Invoke put_status_parsing_file function to print
	a file parsing status message. This only changes
	the status message printed by parsers that use the
	toolbox, the file names are no longer printed
	with three periods after them.

2003-04-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* mkdist.sh: Grab the version number out of the
	configure.in file and check it against the version
	in the configure file in an attempt to avoid
	releasing a dist with the wrong version info.
	Update the list of copied files to account for
	changes from move to sourceforge CVS.

2003-04-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/projmng.tcl (sn_new_project_cb): Don't delete
	a project file that was created in batch mode. The
	sn_create_new_project proc returns zero on a
	normal exit when in batch mode, so we were deleting
	the project file just after it had been created.
	[Bug 656067]

2003-04-02  Steven Johnson  <sjohnson@neurizon.net>

	* gui/tree.tcl (sort_refresh): Added this new method,
	to allow the sort order of a list to be reset,
	after changes may have been made to the list contents.
	* gui/retrieverpane.tcl (start_search): Called new
	sort_refresh method after symbol tree is regenerated
	(following a file save). This restores the sort
	order that was selected prior to the save.
	[Bug 577348]
